[tool.black]
line-length = 80

[tool.poetry]
name = "pyb_utils"
version = "2.0.0"
description = "Basic utilities for PyBullet, including collision detection, ghost (i.e. visual-only) objects, and cameras."
authors = ["Adam Heins <mail@adamheins.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.22.0"
pybullet = "^3.2.1"
spatialmath-python = ">=1.0.0"
Pillow = ">=10.0.1"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
robot-descriptions = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
