[project]
name = "pyb_utils"
version = "2.4.2"
description = "Basic utilities for PyBullet, including collision detection, ghost (i.e. visual-only) objects, and cameras."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pybullet>=3.2.1",
  "Pillow>=10.0.1",
  "matplotlib>=3.5.1",
  "opencv-python>=4.5.5",
  "colorama>=0.4.6",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "robot-descriptions>=1.6.0",
]

[project.scripts]
pybview = "pyb_utils.cli.pybview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
